--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
+    android:id="@+id/main"
     android:background="#D7C3E3"
-    android:padding="20dp">
+    android:padding="20dp"
+    >
 
-    <!-- Logo -->
+
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/hopebridgelogo"
-        android:layout_gravity="center"
+        android:id="@+id/startlogo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="170dp"
+        android:src="@drawable/hblogo"
         android:contentDescription="App Logo"
-        android:layout_marginBottom="10dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
-    <!-- Welcome Text -->
+
     <TextView
+        android:id="@+id/starttitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome to Hope Bridge!"
         android:textSize="27sp"
         android:textStyle="bold"
         android:textColor="#6F4E8e"
-        android:layout_marginTop="9dp"
-        android:gravity="center"/>
+        app:layout_constraintTop_toBottomOf="@id/startlogo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
-    <!-- Description -->
+
     <TextView
+        android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Help the world heal with Hope Bridge! \nYou really think I needed all guards at the Hexgates?"
-        android:textSize="14sp"
-        android:textColor="@color/white"
+        android:layout_marginTop="150dp"
         android:gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:text="Help the world heal with Hope Bridge! \nYou really think I needed all guards at the Hexgates?"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/starttitle" />
 
-    <!-- Sign In Button -->
     <Button
         android:id="@+id/btnSignIn"
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="#8E75A3"
         android:text="SIGN IN"
         android:textColor="@color/white"
-        android:layout_marginTop="120dp"/>
-    <!-- Register Button -->
+        app:layout_constraintTop_toBottomOf="@id/message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="300dp"
@@ -55,6 +72,9 @@
         android:backgroundTint="#725883"
         android:text="REGISTER"
         android:textColor="@color/white"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
