--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -13,8 +12,8 @@
         android:id="@+id/examplelogo"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/example"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/hblogo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +22,7 @@
         android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:text="Sign Up"
         android:textColor="@color/black"
         android:fontFamily="@font/helvetica_bold"
@@ -48,7 +48,7 @@
         android:id="@+id/email"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="90dp"
         android:background="@drawable/rounded_input_bg"
         android:hint="Email"
         android:textSize="16sp"
