--- a/app/src/main/res/layout/activity_user_post.xml
+++ b/app/src/main/res/layout/activity_user_post.xml
@@ -44,10 +44,16 @@
             android:contentDescription="Notifications"/>
     </androidx.appcompat.widget.Toolbar>
 
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="62dp"
         android:fillViewport="true"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,13 +65,13 @@
             android:layout_height="wrap_content"
             android:padding="16dp">
 
+
             <Button
                 android:id="@+id/userpost"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:padding="0dp"
-                android:backgroundTint="@color/white"
-                android:textColor="@color/black"
+                android:background="@drawable/squarecorner"
                 android:text="Project"
                 android:textSize="15sp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -77,7 +83,8 @@
                 android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:padding="0dp"
-                android:background="@drawable/squarecorner"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/black"
                 android:text="News"
                 android:textSize="15sp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -97,77 +104,36 @@
                 app:layout_constraintLeft_toRightOf="@+id/userpost"
                 />
 
-
-            <ImageView
-                android:id="@+id/disasterImage"
-                android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_marginTop="50dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/disaster_image"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <ImageView
-                android:id="@+id/locationIcon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/location"
-                android:contentDescription="Location Icon"
-                app:layout_constraintTop_toBottomOf="@id/disasterImage"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="10dp"/>
-
-            <TextView
-                android:id="@+id/locationText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Lucao, Dagupan City"
-                android:textSize="16sp"
-                android:textColor="#000000"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/locationIcon"
-                app:layout_constraintTop_toTopOf="@id/locationIcon"
-                android:layout_marginStart="5dp"/>
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="A Tornado caused widespread damage in Lucao, Dagupan City, leaving thousands of families and children without access to safe water and sanitation facilities"
-                android:textSize="14sp"
-                android:textColor="#333333"
-                app:layout_constraintTop_toBottomOf="@id/locationIcon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="5dp"/>
-
-            <Button
-                android:id="@+id/btndetails"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:backgroundTint="#8E75A3"
-                android:text="Donate Here"
-                android:textColor="#FFFFFF"
-                app:layout_constraintTop_toBottomOf="@id/description"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="10dp"/>
-
-            <ImageView
+            <LinearLayout
+                android:id="@+id/projectContainer"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginTop="15dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/fire_disaster"
-                app:layout_constraintTop_toBottomOf="@+id/btndetails"
-                />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/news"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
-
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+        <Button
+            android:id="@+id/Createproj"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:drawableTop="@drawable/create_project"
+            android:background="@drawable/circle"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="60dp"
+            android:elevation="5dp"
+            />
+
+    </FrameLayout>
+
+
+
 
     <LinearLayout
         android:layout_width="300dp"
@@ -213,7 +179,6 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#A0A0A0"/>
-
 
         <LinearLayout
             android:id="@+id/about_section"
